--- a/client/app/src/main/res/values/strings.xml
+++ b/client/app/src/main/res/values/strings.xml
@@ -1,5 +1,7 @@
 <resources>
     <string name="app_name">qrnote</string>
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="qr_scan">QR 코드 스캔</string>
+    <string name="qr_find">주변 QR노트 찾기</string>
+    <string name="note_create">노트 생성</string>
+    <string name="note_list">노트 목록</string>
 </resources>
