--- a/client/app/src/main/res/values/strings.xml
+++ b/client/app/src/main/res/values/strings.xml
@@ -1,10 +1,10 @@
 <resources>
-    <string name="app_name">qrnote</string>
+    <string name="app_name">QR Note</string>
     <string name="button_string_qr_scan">QR 코드 스캔</string>
-    <string name="button_string_qr_find">주변 QR노트 찾기</string>
+    <string name="button_string_qr_find">주변 QR 노트 찾기</string>
     <string name="button_string_qr_generate">QR Generate</string>
     <string name="button_string_note_create">노트 생성</string>
     <string name="button_string_note_list">노트 목록</string>
-    <!-- TODO: Remove or change this placeholder text -->
+    <string name="qr_data_string">QR data 읽어온거</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
