--- a/client/app/src/main/res/values/strings.xml
+++ b/client/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="button_string_note_list">노트 목록</string>
     <string name="qr_data_string">QR data 읽어온거</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="button_string_qr_show">QR Code</string>
 </resources>
